--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Comunicaciones/Orbita.Controles.Comunicaciones.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Comunicaciones/Orbita.Controles.Comunicaciones.csproj
@@ -74,6 +74,12 @@
     <Compile Include="OClienteESSiemens.Designer.cs">
       <DependentUpon>OClienteESSiemens.cs</DependentUpon>
     </Compile>
+    <Compile Include="OClienteESSiemens1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="OClienteESSiemens1.Designer.cs">
+      <DependentUpon>OClienteESSiemens1.cs</DependentUpon>
+    </Compile>
     <Compile Include="OClienteMCUSB.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -101,6 +107,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OClienteESSiemens.resx">
       <DependentUpon>OClienteESSiemens.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OClienteESSiemens1.resx">
+      <DependentUpon>OClienteESSiemens1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OClienteMCUSB.resx">
       <DependentUpon>OClienteMCUSB.cs</DependentUpon>
