--- a/CodigoFuente/x32/Orbita/Orbita.BBDD/Orbita.BBDD.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.BBDD/Orbita.BBDD.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Conexión\OInfoMirroring.cs" />
     <Compile Include="Conexión\OConexion.cs" />
     <Compile Include="Conexión\OConexiones.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
