--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Estilos/Orbita.Controles.Estilos.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Estilos/Orbita.Controles.Estilos.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D104B7D1-93CB-46AE-8F84-AA68BB3B2C5E}</ProjectGuid>
+    <ProjectGuid>{69BCFE99-17D1-4F08-AD49-95C395D247A6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Orbita.Controles.Shared</RootNamespace>
-    <AssemblyName>Orbita.Controles.Shared</AssemblyName>
+    <RootNamespace>Orbita.Controles.Estilos</RootNamespace>
+    <AssemblyName>Orbita.Controles.Estilos</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -38,27 +38,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enumerados\PosicionToolBar.cs" />
-    <Compile Include="Enumerados\TipoBoton.cs" />
-    <Compile Include="Enumerados\TipoTool.cs" />
-    <Compile Include="Clases\OExcepcion.cs" />
-    <Compile Include="UC\OrbitaUserControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC\OrbitaUserControl.Designer.cs">
-      <DependentUpon>OrbitaUserControl.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="UC\OrbitaUserControl.resx">
-      <DependentUpon>OrbitaUserControl.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
